--- a/js/深度克隆/index.html
+++ b/js/深度克隆/index.html
@@ -10,6 +10,7 @@
 
 </body>
 <script type="text/javascript">
+clone({name:'leo',age: 20})
 function clone(Obj) {
     var buf;
     //instanceof判断一个对象是否为某一数据类型，或一个变量是否为一个对象的实例;返回boolean类型
@@ -23,7 +24,9 @@ function clone(Obj) {
     } else if (Obj instanceof Object) {
         buf = {}; //创建一个空对象
         for (var k in Obj) { //为这个对象添加新的属性
+            console.log(k);
             buf[k] = clone(Obj[k]);
+
         }
         return buf;
     } else {
@@ -31,4 +34,5 @@ function clone(Obj) {
     }
 }
 </script>
+
 </html>
