--- a/js/日期转换/index.html
+++ b/js/日期转换/index.html
@@ -18,7 +18,7 @@
 
 </body>
 <script type="text/javascript">
-Weekly('09, 21, 2005')
+Weekly('09, 21')
 function Weekly(a)  {
     // 将输入的时间转换成标准格式
     a = new Date(a)
