--- a/js/继承/继承.html
+++ b/js/继承/继承.html
@@ -14,7 +14,7 @@
      * 概念：
      *     - 在原有对象的基础上，略作修改，得到一个新对象
      *     - 不影响原对象的功能
-     *     - 子类影响父类，子类可以继承父类的一些功能（代码复用）
+     *     - 子类不影响父类，子类可以继承父类的一些功能（代码复用）
      */
 
     function createPerson(name,sex) {
