--- a/js/深度克隆/index.html
+++ b/js/深度克隆/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
 
 </body>
 <script type="text/javascript">
-clone({name:'leo',age: 20})
-function clone(Obj) {
-    var buf;
-    //instanceof判断一个对象是否为某一数据类型，或一个变量是否为一个对象的实例;返回boolean类型
-    if (Obj instanceof Array) {
-        buf = []; //创建一个空的数组
-        var i = Obj.length;
-        while (i--) {
-            buf[i] = clone(Obj[i]);
+  console.log(clone({
+    name: 'leo',
+    age: 20
+  }));
+
+
+  function clone(Obj) {
+    let buf = Array.isArray(Obj) ? [] : {}
+    if (Obj && typeof Obj === "object") {
+      for (k in Obj) {
+        if (Obj.hasOwnProperty(k)) {
+          if (Obj[k] && typeof Obj[k] === "object") {
+            buf[k] = clone(Obj[k])
+          } else {
+            buf[k] = Obj[k]
+          }
         }
-        return buf;
-    } else if (Obj instanceof Object) {
-        buf = {}; //创建一个空对象
-        for (var k in Obj) { //为这个对象添加新的属性
-            buf[k] = clone(Obj[k]);
-        }
-        return buf;
-    } else {
-        return Obj;
+      }
     }
-}
+    return buf
+  }
 </script>
 
 </html>
